--- a/PhotoHistory.Data/PhotoHistory.Data.csproj
+++ b/PhotoHistory.Data/PhotoHistory.Data.csproj
@@ -55,7 +55,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Photo.cs" />
+    <Compile Include="PhotoTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
