--- a/PhotoHistory.Services/PhotoHistory.Services.csproj
+++ b/PhotoHistory.Services/PhotoHistory.Services.csproj
@@ -54,11 +54,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PhotoService.cs" />
+    <Compile Include="PhotoTagService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TagService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PhotoHistory.Data\PhotoHistory.Data.csproj">
+      <Project>{8352E07E-1DD1-45C4-84EF-E5A0C94BCD8B}</Project>
+      <Name>PhotoHistory.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PhotoHistory.Models\PhotoHistory.Models.csproj">
+      <Project>{5601C409-7B43-4A6E-A182-6A4CFD836E61}</Project>
+      <Name>PhotoHistory.Models</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
