--- a/PhotoHistory/PhotoHistory.WebMVC.csproj
+++ b/PhotoHistory/PhotoHistory.WebMVC.csproj
@@ -186,7 +186,8 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Custom\BootstrapOverride.css" />
+    <Content Include="Custom\BootstrapOverride.js" />
+    <Content Include="Custom\OverrideBootstrap.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
