--- a/PhotoHistory/Web.config
+++ b/PhotoHistory/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PhotoHistory;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="DefaultConnection" connectionString="Data Source=tcp:traceddbserver.database.windows.net,1433;Initial Catalog=traced_db;User Id=taylorfulner@traceddbserver;Password=Hereisapasswordforme!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"/>-->
+	  <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=PhotoHistory;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=tcp:traceddbserver.database.windows.net,1433;Initial Catalog=traced_db;User Id=taylorfulner@traceddbserver;Password=Hereisapasswordforme!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"/>
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -21,9 +21,14 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime maxRequestLength="1048576" targetFramework="4.8" />
   </system.web>
   <system.webServer>
+	<security>
+	  <requestFiltering>
+		  <requestLimits maxAllowedContentLength="1073741824" />
+	  </requestFiltering>
+	</security>
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
